<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CHIP App</string>
    <string name="action_settings">Settings</string>
    <string name="common_confirm_exit_app">Exit the app?</string>
    <string name="common_login">Login</string>
    <string name="common_register">Register</string>
    <string name="common_profile">Profile</string>
    <string name="common_training">Training</string>
    <string name="common_discussion">Discussion</string>
    <string name="common_logout">Logout</string>
    <string name="common_exit">Exit App</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_submit">Submit</string>
    <string name="common_for">for</string>
    <string name="common_coming_soon">Coming Soon!</string>
    <string name="common_support_coming_soon">Support for this content type coming soon</string>
    <string name="title_activity_web_view">Content Viewer</string>
    <string name="common_none">None</string>
    <string name="common_mentor">Mentor</string>

</resources>
